src-ken&y/objects/Balance_Transfer__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>As_Of__c</fullName>
        <label>As Of</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CompanyId__c</fullName>
        <label>CompanyId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PeriodId__c</fullName>
        <label>PeriodId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Balance Transfer</label>
</CustomObject>